cmake_minimum_required(VERSION 2.8)
project( 2fish2equi-video )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( 2fish2equi-video 2fish2equi-video.cpp )
target_link_libraries( 2fish2equi-video ${OpenCV_LIBS} )
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O2")
